--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Code By Webdevtrick ( http://webdevtrick.com ) */
-@import url('http://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
 
 div.panel{
     z-index: 3;
@@ -459,7 +459,7 @@ div.msg{
             width: 100%;
             
             position: relative; 
-            top: 19%;
+            top: 7em;
 
         }
         /* top: 70 */
@@ -557,7 +557,7 @@ div.msg{
             padding-left: 15px;
             margin-right: auto;
             margin-left: auto;
-            padding-top: 10em;
+            padding-top: 12em;
             max-width: 90%;
         }
         
