--- a/grades/template/index.html
+++ b/grades/template/index.html
@@ -43,12 +43,12 @@
       }
 
       div.charts-0 {
-        margin-top: 3em;
+        margin-top: 3%;
         text-align: center;
       }
 
       div.charts-1 {
-        margin-top: 7em;
+        margin-top: 3%;
         text-align: center;
       }
 
@@ -139,7 +139,7 @@
     <title>IS grades</title>
   </head>
   <body>
-    <header id="header" style="width: 1087px">
+    <header id="header" style="width: 100%">
       <div style="width: 100%; height: 100%">
         <div style="width: 100%; height: 62%; top: 0%; position: absolute">
           <a
@@ -183,6 +183,7 @@
             </div>
           </div>
         </div>
+
         <div
           style="
             position: absolute;
@@ -244,7 +245,8 @@
       </select>
       <button
         id="resetFilter"
-        style="font-size: 0.9rem; padding: 4px 8px; width: 13%">
+        style="font-size: 0.9rem; padding: 4px 8px; width: 13%"
+      >
         איפוס סינון
       </button>
     </div>
@@ -404,6 +406,7 @@
           updateFilterOptions(data); // <== This is what was missing
         })
         .catch((error) => console.error("Error loading JSON data:", error));
+
     </script>
   </body>
 </html>
